- The Wayland check for QtWebEngine is now disabled on Qt >= 5.11.2, as those
  versions should work without any issues.
- The JavaScript `console` object is now available in PAC files.
- The metainfo file `qutebrowser.appdata.xml` is now renamed to
  `org.qutebrowser.qutebrowser.appdata.xml`.
- The `qute-pass` userscript now understands domains in gpg filenames
  in addition to directory names.

Fixed
~~~~~

- Invalid world IDs now get rejected for `:jseval` and GreaseMonkey scripts.
- When websites suggest download filenames with invalid characters, those are
  now correctly replaced.
- Invalid hint length calculation in certain rare cases.
- Dragging tabs in the tab bar (which was broken in v1.5.0)
- Using Shift-Home in command mode now works properly.
- Workaround for a Qt bug which prevented
  `content.cookies.accept = no-3rdparty` from working properly on some pages
  like GMail. However, the default for `content.cookies.accept` is still `all`
  to be in line with what other browsers do.
- `:navigate` not incrementing in anchors or queries.
- Crash when trying to use a proxy requiring authentication with QtWebKit.
- Slashes in search terms are now percent-escaped.
- When `scrolling.bar = True` was set in versions before v1.5.0, this now
  correctly gets migrated to `always` instead of `when-searching`.
- Completion highlighting now works again on Qt 5.11.3 and 5.12.1.
- The outdated header `X-Do-Not-Track` is no longer sent.
- A javascript error on page load when using Qt 5.12 was fixed.
- `window.print()` works with Qt 5.12 now.
- PAC proxies were never correctly supported with QtWebEngine, but are now
  explicitly disallowed.

v1.5.2
------

Changed
~~~~~~~

- The `content.cookies.accept` setting is now set to `all` instead of
  `no-3rdparty` by default, as `no-3rdparty` breaks various pages such as
  GMail.

v1.5.1
------

Fixed
~~~~~

- Flickering when opening/closing tabs (as soon as more than 10 are open) on
  some pages.